<resources>
    <string name="app_name">MarketMaps</string>
    <string name="title_activity_maps">Карта</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="loading">Загрузка…</string>
    <string name="menuMap">Карта</string>
    <string name="menuChangeCity">Сменить город</string>
    <string name="menuAddShop">Для владельцев магазинов</string>
    <string name="error_loading_image">Не удалось загрузить изображение.</string>
    <string name="add_city_info">Чтобы добавить ваш магазин в наше приложение, \nнапишите на почту</string>
    <string name="email">marketmaps@mail.ru</string>
    <string name="add_city_info2">В письме укажите: \n·Адрес магазина\n·Изображение плана магазина, или ссылку на изображение\n·Дополнительную информацию о магазине, которая будет отображаться над планом магазина\n·Подтверждение того, что вы являетесь владельцем магазина(Документ права на собственность, скан вашего паспорта, или любой другой удобный вам способ подтверждения.)</string>
    <string name="logo_text">logo</string>
</resources>