<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddCityInfo">
    <ImageView
            android:layout_width="84dp"
            android:layout_height="83dp" app:srcCompat="@drawable/marketmapicon"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="84dp" app:layout_constraintVertical_bias="0.06"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="170dp"
            android:textSize="20sp"
            android:layout_height="28dp" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="184dp"
            app:layout_constraintVertical_bias="0.096"/>
    <TextView
            android:text="@string/add_city_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="240dp"
            app:layout_constraintHorizontal_bias="0.088"/>
    <TextView
            android:text="@string/add_city_info2"
            android:layout_width="395dp"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/mailTextView" android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mailTextView"
            android:textSize="17sp"
            android:autoLink="email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="12dp"/>
    <TextView
            android:text="Если вы хотите изменить карту своего магазина, то вы можете сделать это, используя свой секретный код на сайте https://mapshack.herokuapp.com/"
            android:layout_width="395dp"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/mailTextView" android:layout_marginTop="212dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375" android:autoLink="web"/>
</androidx.constraintlayout.widget.ConstraintLayout>